@@ -1,7 +1,5 @@
 package ganymedes01.etfuturum.client.skins;
 
-import cpw.mods.fml.relauncher.Side;
-import cpw.mods.fml.relauncher.SideOnly;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.IImageBuffer;
 import net.minecraft.client.renderer.texture.DynamicTexture;
@@ -18,18 +16,17 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * Copied from vanilla and adapted to fit my needs
  */
-@SideOnly(Side.CLIENT)
 public class NewThreadDownloadImageData extends SimpleTexture {
 
 	static final Logger logger = LogManager.getLogger();
 	private static final AtomicInteger threadDownloadCounter = new AtomicInteger(0);
-	final File field_152434_e;
+	final File cacheFile;
 	final String imageUrl;
 	final IImageBuffer imageBuffer;
 	private BufferedImage bufferedImage;
@@ -40,7 +37,7 @@ public class NewThreadDownloadImageData extends SimpleTexture {
 
 	public NewThreadDownloadImageData(File file, String imageUrl, ResourceLocation texture, NewImageBufferDownload imgDownload, ResourceLocation resLocationOld, IImageBuffer imageBuffer) {
 		super(texture);
-		field_152434_e = file;
+		cacheFile = file;
 		this.imageUrl = imageUrl;
 		this.imgDownload = imgDownload;
 		this.resLocationOld = resLocationOld;
@@ -81,16 +78,16 @@ public class NewThreadDownloadImageData extends SimpleTexture {
 			super.loadTexture(p_110551_1_);
 
 		if (imageThread == null)
-			if (field_152434_e != null && field_152434_e.isFile()) {
-				logger.debug("Loading http texture from local cache ({})", field_152434_e);
+			if (cacheFile != null && cacheFile.isFile()) {
+				logger.debug("Loading http texture from local cache ({})", cacheFile);
 
 				try {
-					bufferedImage = ImageIO.read(field_152434_e);
+					bufferedImage = ImageIO.read(cacheFile);
 
 					if (imageBuffer != null)
 						setBufferedImage(imageBuffer.parseUserSkin(bufferedImage));
 				} catch (IOException ioexception) {
-					logger.error("Couldn't load skin " + field_152434_e, ioexception);
+					logger.error("Couldn't load skin " + cacheFile, ioexception);
 					func_152433_a();
 				}
 			} else
@@ -103,10 +100,10 @@ public class NewThreadDownloadImageData extends SimpleTexture {
 			@Override
 			public void run() {
 				HttpURLConnection httpurlconnection = null;
-				NewThreadDownloadImageData.logger.debug("Downloading http texture from {} to {}", imageUrl, field_152434_e);
+				NewThreadDownloadImageData.logger.debug("Downloading http texture from {} to {}", imageUrl, cacheFile);
 
 				try {
-					httpurlconnection = (HttpURLConnection) new URL(imageUrl).openConnection(Minecraft.getMinecraft().getProxy());
+					httpurlconnection = (HttpURLConnection) new URI(imageUrl).toURL().openConnection(Minecraft.getMinecraft().getProxy());
 					httpurlconnection.setDoInput(true);
 					httpurlconnection.setDoOutput(false);
 					httpurlconnection.connect();
@@ -114,9 +111,9 @@ public class NewThreadDownloadImageData extends SimpleTexture {
 					if (httpurlconnection.getResponseCode() / 100 == 2) {
 						BufferedImage bufferedimage;
 
-						if (field_152434_e != null) {
-							FileUtils.copyInputStreamToFile(httpurlconnection.getInputStream(), field_152434_e);
-							bufferedimage = ImageIO.read(field_152434_e);
+						if (cacheFile != null) {
+							FileUtils.copyInputStreamToFile(httpurlconnection.getInputStream(), cacheFile);
+							bufferedimage = ImageIO.read(cacheFile);
 						} else
 							bufferedimage = ImageIO.read(httpurlconnection.getInputStream());
 
